restablecer y cambiar password

--- a/accounts/templates/accounts/dashboard_base.html
+++ b/accounts/templates/accounts/dashboard_base.html
@@ -9,7 +9,7 @@
   
 
     <hr class="border-light">
-    <a href="{% url 'accounts:profile' %}" class="text-white text-decoration-none d-block mb-2">👤 Mi perfil</a>
+    <a href="{% url 'accounts:password_change' %}" class="text-white text-decoration-none d-block mb-2">Cambiar contraseña</a>
     <a href="{% url 'accounts:logout' %}" class="text-white text-decoration-none d-block mb-2">🚪 Cerrar sesión</a>
   </nav>
 
