--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -63,7 +63,7 @@
               </a>
               <ul class="dropdown-menu dropdown-menu-end">
                 <li><a class="dropdown-item" href="{% url 'accounts:profile' %}">Mi Perfil</a></li>
-                <li><a class="dropdown-item" href="{% url 'accounts:dashboard' %}">_Dashboard</a></li>
+                <li><a class="dropdown-item" href="{% url 'accounts:dashboard_profile' %}">_Dashboard</a></li>
                 {% comment %} <li><a class="dropdown-item" href="{% url 'accounts:dashboard_redirect' %}">Dashboard</a></li> {% endcomment %}
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item text-danger" href="{% url 'accounts:logout' %}">Cerrar sesión</a></li>
